syntax = "proto3";
package bff;

import "bff/bcommon.proto";

option go_package = "bff/;bffpb";

//玩家信息
message FriendInfo{
  PlayerSimpleInfo info = 1;//基本信息
  string remarks = 2;//备注
  int64 tim = 3;//是好友时表示成为好友时的时间戳 是黑名单时表示拉入黑名单时时间戳 是申请名单时表示申请时间戳 秒
}

//获取好友列表
message C2SFriendGet{
  int32 list_type = 1;//1 好友 2申请 3黑名单 4近期同队
}

message S2CFriendGet{
  int32 list_type = 1;//1 好友 2申请 3黑名单 4近期同队
  repeated FriendInfo infos = 2; //列表
  string myFriendCode = 3; //我的好友码
}

//根据好友邀请码获取玩家信息
message C2SFriendGetPlayerInfoByCode {
  string friend_code = 1;
}

message S2CFriendGetPlayerInfoByCode {
  PlayerSimpleInfo infos = 1;
}

//申请添加好友
message C2SFriendAdd{
  int64 addUid = 1; //playerUid
}

message S2CFriendAdd{

}

message S2CFriendAddNotify{
  PlayerSimpleInfo requestInfo = 1; //好友申请方信息
  int64 addTime = 2; //申请时间
}

//同意添加好友
message C2SFriendAgree{
  int64 uid = 1;
}

message S2CFriendAgree{
  PlayerSimpleInfo friendInfo = 1; //新增好友信息（客户端需要把uid放入好友列表, 并且移除申请列表中的对应player）
}

//拒绝添加好友
message C2SFriendRefuse{
  repeated int64 uids = 1;
  bool isBlacklist = 2; // true 加入黑名单
}

message S2CFriendRefuse{
  repeated int64 uids = 1; //删除的id
  bool isBlacklist = 2; // true 加入黑名单
}

//删除好友（双向删除）
message C2SFriendDelete{
  int64 delUid = 1;   //playerUid
  bool isBlacklist = 2; // 1加入黑名单
}

message S2CFriendDelete{
  int64 delUid = 1; //playerUid
  bool isBlacklist = 2; // 1加入黑名单
}

//备注
message C2SFriendNickName{
  int64 uid = 1;
  string nickName = 2; //别名
}

message S2CFriendNickName{
  int64 uid = 1;
  string nickName = 2; //别名
}


//移除黑名单
message C2SFriendDeleteBlack{
  int64 uid = 1; //要移除黑名单中的uid
}

message S2CFriendDeleteBlack{
  int64 uid = 1;
}